[gd_scene load_steps=11 format=2]

[ext_resource path="res://tests/storage/storage.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/normal_button.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://fonts/PermanentMarker_30.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/buttons/normal_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/buttons/normal_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/normal_button.gd" type="Script" id=7]
[ext_resource path="res://fonts/PermanentMarker.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/PermanentMarker_18.tres" type="DynamicFont" id=9]


[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 8 )

[node name="storage" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 376.0
margin_top = 12.0
margin_right = 557.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 4 )
text = "Storage Tests"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="." instance=ExtResource( 5 )]
margin_right = 190.354
margin_bottom = 44.6465
label = "Back"

[node name="test_storage" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 65.0
margin_right = 190.0
margin_bottom = 110.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
label = "Test Storage"

[node name="label" type="RichTextLabel" parent="test_storage"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 45.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_lock_": true
}

[node name="image" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 450.0
margin_right = 104.0
margin_bottom = 514.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console" type="RichTextLabel" parent="."]
margin_left = 250.586
margin_top = 117.012
margin_right = 946.586
margin_bottom = 522.012
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 131.0
margin_right = 34.0
margin_bottom = 155.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="login_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Login"

[node name="upload_image_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 155.0
margin_right = 34.0
margin_bottom = 179.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="upload_image_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Upload Image"

[node name="download_image_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 179.0
margin_right = 34.0
margin_bottom = 203.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="download_image_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Download Image"

[node name="image_url_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 203.0
margin_right = 34.0
margin_bottom = 227.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="image_url_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Image URL"

[node name="image_meta_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 227.0
margin_right = 34.0
margin_bottom = 251.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="image_meta_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Image Metadata"

[node name="image_delete_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 251.0
margin_right = 34.0
margin_bottom = 275.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="image_delete_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Delete Image"

[node name="upload_document_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 275.0
margin_right = 34.0
margin_bottom = 299.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="upload_document_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Upload Document"

[node name="document_meta_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 299.0
margin_right = 34.0
margin_bottom = 323.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="document_meta_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Document Metadata"

[node name="document_delete_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 323.0
margin_right = 34.0
margin_bottom = 347.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="document_delete_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Delete Document"

[node name="upload_string_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 347.0
margin_right = 34.0
margin_bottom = 371.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="upload_string_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Upload String"

[node name="string_add_meta_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 371.0
margin_right = 34.0
margin_bottom = 395.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="string_add_meta_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Add Metadata"

[node name="string_meta_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 395.0
margin_right = 34.0
margin_bottom = 419.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="string_meta_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "String Metadata"

[node name="string_delete_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 419.0
margin_right = 34.0
margin_bottom = 443.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="string_delete_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Delete String"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="test_storage" to="." method="_on_test_storage_pressed"]
